kubernetes/internal/ingress/nginx-svc.test.yaml
apiVersion: v1
kind: Service
metadata:
 name: svc-internal
spec:
 type: ClusterIP
 selector:
   app.kubernetes.io/name: nginx
 ports:
 - port: 80
   targetPort: 80
